--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,6 @@ build_flags =
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.13
 	adafruit/Adafruit ADS1X15@^2.5.0
-	fastled/FastLED@^3.9.7
+	fastled/FastLED@3.5.0
 	robtillaart/AS5600@^0.6.4
 	t-vk/ESP32 BLE Keyboard@^0.3.2
